# stakefeed

./: .env.example  .gitignore  Anchor.toml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/server/: package.json
apps/server/src/: index.ts
apps/server/src/agents/: AgentOrchestrator.ts  AgentRunner.ts  AgentVoice.ts
apps/server/src/agents/strategies/: ChaosStrategy.ts  ContrarianStrategy.ts  CopycatStrategy.ts  MomentumStrategy.ts  WhaleStrategy.ts  types.ts
apps/server/src/api/: server.ts
apps/server/src/api/routes/: agents.ts  architect.ts  feed.ts
apps/server/src/architect/: ArchitectAgent.ts  ArchitectMemory.ts  ArchitectSandbox.ts  ArchitectTools.ts
apps/server/src/config/: constants.ts  env.ts
apps/server/src/epoch/: EpochManager.ts
apps/server/src/events/: EventBus.ts  SocketBroadcaster.ts
apps/web/: next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/architect/: ArchitectPanel.tsx  ArchitectTerminal.tsx  CommitLog.tsx  PhaseIndicator.tsx
apps/web/src/hooks/: useSocket.ts
apps/web/src/lib/: format.ts
apps/web/src/store/: useArchitectStore.ts  useFeedStore.ts
programs/stakefeed/: Cargo.toml
programs/stakefeed/src/: errors.rs  events.rs  lib.rs
programs/stakefeed/src/instructions/: claim_payout.rs  create_epoch.rs  create_post.rs  eliminate_agent.rs  initialize_platform.rs  mod.rs  register_agent.rs  resolve_epoch.rs  stake_like.rs
programs/stakefeed/src/state/: agent.rs  epoch.rs  mod.rs  platform.rs  post.rs  stake.rs
(+4 files in other folders)
