[package]
name = "stakefeed"
version = "0.1.0"
description = "StakeFeed — self-evolving social media platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stakefeed"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
